<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">浮夸播放器</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	 <string name="songlist">播放列表</string>
	  <string name="shang">返回上一层</string>
	   <string name="choose">选择</string>
	    <string name="no">取消</string>
	    <string name="time">00:00</string>
	    <string name="lrc">歌词show</string>
	     <string name="singer">歌手</string>
	      <string name="songname">歌名</string>
	    
</resources>
